5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4472/executions/1834_1273.log
== SUBMITION (2019-06-26 12:09:19) 
-- CODE:
fromm numpy import *
from numpy.linalg import *

coeficientes = array([[1,-1,0,0], [0,1,-1,0], [0,0,1,0], [1,0,0,1]])

#linha da matriz
valores = array([50, -120, 350, 870])

#coluna da matriz
valores = valores.T

solucao = solve(coeficientes, valores)

print(solucoes)

-- EXECUTION TIME:
0.649593
-- ERROR:
  File "/home/codebench/codes/1834/1273/main.py", line 1
    fromm numpy import *
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 12:09:23) 
-- CODE:
fromm numpy import *
from numpy.linalg import *

coeficientes = array([[1,-1,0,0], [0,1,-1,0], [0,0,1,0], [1,0,0,1]])

#linha da matriz
valores = array([50, -120, 350, 870])

#coluna da matriz
valores = valores.T

solucao = solve(coeficientes, valores)

print(solucoes)

-- ERROR:
File "XXXX", line 1
    fromm numpy import *
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 12:09:32) 
-- CODE:
from numpy import *
from numpy.linalg import *

coeficientes = array([[1,-1,0,0], [0,1,-1,0], [0,0,1,0], [1,0,0,1]])

#linha da matriz
valores = array([50, -120, 350, 870])

#coluna da matriz
valores = valores.T

solucao = solve(coeficientes, valores)

print(solucoes)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 12:09:49) 
-- CODE:
from numpy import *
from numpy.linalg import *

coeficientes = array([[1,-1,0,0], [0,1,-1,0], [0,0,1,0], [1,0,0,1]])

#linha da matriz
valores = array([50, -120, 350, 870])

#coluna da matriz
valores = valores.T

solucao = solve(coeficientes, valores)

print(solucao)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 12:10:02) 
-- CODE:
from numpy import *
from numpy.linalg import *

coeficientes = array([[1,-1,0,0], [0,1,-1,0], [0,0,1,0], [1,0,0,1]])

#linha da matriz
valores = array([50, -120, 350, 870])

#coluna da matriz
valores = valores.T

solucao = solve(coeficientes, valores)

print(solucao)

-- EXECUTION TIME:
1.12112
-- TEST CASE 1:
---- input:
Não_há
---- correct output:
[280. 230. 350. 590.]
---- user output:
[280. 230. 350. 590.]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
